# unified-llm-client

./: .gitignore  .mypy.ini  .pypirc.sample  LICENSE  MANIFEST.in  README.md  Taskfile.examples.yaml  Taskfile.yaml  build_package.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-publish.yml
articles/: ideas.md  using_local_models_with_ollama.md
docs/: api_reference.md  index.md  ollama.md  publishing.md  quickstart.md  tools.md
examples/: 01_basic_example.py  02_openai_tools_example.py  03_ollama_tools_example.py  04_anthropic_tool_calling.py  05_streaming.py  basic_example.py  ollama_example.py  tool_example.py
llm/: __init__.py  anthropic.py  chat_completions.py  client.py  requirements.txt  responses_api.py  streaming.py  streaming_responses.py  tool_handling.py  tooling.py  types.py
tests/: test_client.py  test_import.py  test_tools.py
tests/test_anthropic/: test_anthropic_tools.py  test_tool_conversion.py
