[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.1.0"
description = "A unified async client for interacting with multiple LLM providers"
readme = "README.md"
authors = [
    {name = "skitsanos", email = "info@skitsanos.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "openai", "anthropic", "gpt", "claude", "ai", "machine learning", "ollama"]
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.22.0",
    "openai>=1.28.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/skitsanos/llm-client"
"Bug Tracker" = "https://github.com/skitsanos/llm-client/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["llm*"]
exclude = ["tests*", "examples*"]
